fix progress bar going out of bounds

--- a/app/src/styles/Volume.css
+++ b/app/src/styles/Volume.css
@@ -15,7 +15,7 @@
   height: 10px; 
   width: 100%;
   background-color: red;
-  transition: all 0.1s ease;
+  /* transition: all 0.1s ease; */
   transform: scaleX(0);
   transform-origin: 0 0;
 }
